# doxynad

./: .gitignore  CMakeLists.txt  CMakePresets.json  doxy_config.hpp  main  main.cpp  readme.md  string_trim.hpp  system_util.hpp
